--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
-  "dependencies": {
-    "prompt-sync": "^4.2.0"
-  }
+    "scripts": {
+        "test": "jest"
+    },
+    "dependencies": {
+        "prompt-sync": "^4.2.0"
+    },
+    "devDependencies": {
+        "jest": "^29.7.0"
+    }
 }
